--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
     </section>
 
     <section class="grid-section faq" id="faq">
+        <h1>FAQ</h1>
         <dl>
             <dt>Como os lobos caçam suas presas?</dt>
             <dd>Lobos caçam em alcateias organizadas, utilizando suas habilidades de comunicação e trabalho em equipe para cercar e capturar presas grandes, como alces e cervos. Eles têm uma estratégia bem coordenada para garantir o sucesso na caça.</dd>
