Conclusão do CSS da página Animais Fantasmáticos.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <section class="grid-section" id="animals">
         <h1 class="title">Animais Fantasmáticos</h1>
-        <ul>
+        <ul class="animals-list">
             <li>
                 <img src="./img/lobo1_600x800.jpg" alt="Imagem de um lobo cinza">
             </li>
@@ -75,8 +75,8 @@
     </section>
 
     <section class="grid-section faq" id="faq">
-        <h1>FAQ</h1>
-        <dl>
+        <h1 class="title">FAQ</h1>
+        <dl class="list-faq">
             <dt>Como os lobos caçam suas presas?</dt>
             <dd>Lobos caçam em alcateias organizadas, utilizando suas habilidades de comunicação e trabalho em equipe para cercar e capturar presas grandes, como alces e cervos. Eles têm uma estratégia bem coordenada para garantir o sucesso na caça.</dd>
 
@@ -93,13 +93,13 @@
 
     <section class="grid-section contact" id="contact">
 
-        <h1>Contatos</h1>
+        <h1 class="title">Contatos</h1>
         <div class="map">
             <img src="./img/juazeiro.png" alt="">
         </div>
 
         <ul class="data">
-            <li>alex@gamail.com</li>
+            <li>alex@gmail.com</li>
             <li>+55 (88) 9 9999-9999</li>
             <li>juazeiro d Norte</li>
             <li>Ceará - CE</li>
