Mudança do título do site, agora Animais Fantástico.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Animais Fantasmáticos</title>
+    <title>Animais Fantásticos</title>
 
     <link rel="stylesheet" href="/css/style.css">
     <script src="script.js"></script>
@@ -20,7 +20,7 @@
     </nav>
 
     <section class="grid-section" id="animals">
-        <h1 class="title">Animais Fantasmáticos</h1>
+        <h1 class="title">Animais Fantásticos</h1>
         <ul class="animals-list">
             <li>
                 <img src="./img/lobo1_600x800.jpg" alt="Imagem de um lobo cinza">
